--- a/rapporter/Planering_rapport.tex
+++ b/rapporter/Planering_rapport.tex
@@ -1,4 +1,5 @@
-\documentclass{report}
+\documentclass{article}
+
 
 \begin{document}
 	
@@ -11,6 +12,7 @@
 \date{\today}
 \maketitle
 
+\setcounter{tocdepth}{3}
 \tableofcontents
 \newpage
 \setcounter{page}{1}
@@ -20,7 +22,7 @@
 %% Start of the document
 
 \section{Title suggestion}
-\section{Problemformulering}
+\section{Problem specification}
 \section{Method}
 \section{Reference base}
 \section{Time plan}
