--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -1,17 +1,17 @@
 
 
-\begin{tabular}{l|l|l}
+\begin{tabular}{|l|l|l|}
 	\hline
-	Week number & Description                & Comment                                        \\ \hline
+	Week number & Description                & Comment                                              \\ \hline
 	3           &                            &  \\ \hline
-	4           & First draft of thesis plan & Thesis plan approved by the mentor             \\ \hline
-	5           & Final draft of thesis plan & Thesis plan approved by                        \\ \hline
+	4           & First draft of thesis plan & Thesis plan approved by the mentor Lasse Alfredsson  \\ \hline
+	5           & Final draft of thesis plan & Thesis plan approved by Martin Danelljan             \\ \hline
 	6           &                            &  \\ \hline
 	7           &                            &  \\ \hline
 	8           &                            &  \\ \hline
 	9           &                            &  \\ \hline
 	10          &                            &  \\ \hline
-	11          & Half time report           & Present the progress and preliminary results   \\ \hline
+	11          & Half time report           & Present the progress and preliminary results         \\ \hline
 	12          &                            &  \\ \hline
 	13          &                            &  \\ \hline
 	14          &                            &  \\ \hline
@@ -20,8 +20,8 @@
 	17          &                            &  \\ \hline
 	18          &                            &  \\ \hline
 	19          &                            &  \\ \hline
-	20          & First complete draft       & Thesis report has to be approved by the mentor \\ \hline
-	21          & Final draft                & Thesis report has to be approved by            \\ \hline
+	20          & First complete draft       & Thesis report has to be approved by Lasse Alfredsson \\ \hline
+	21          & Final draft                & Thesis report has to be approved by Martin Danelljan \\ \hline
 	22          &                            &  \\ \hline
-	23          & Framläggning 10/6          &  \\ \hline
+	23          & Thesis presentation 10/6   &  \\ \hline
 \end{tabular}
