--- a/rapporter/Planering_rapport.tex
+++ b/rapporter/Planering_rapport.tex
@@ -22,11 +22,18 @@
 %% Start of the document
 
 \section{Title suggestion}
+
+Automatic detection of RPPVSM 
 \section{Problem specification}
+
 \section{Method}
+
 \section{Reference base}
+
 \section{Time plan}
+The time is divided into weeks and the date in brackets represents Friday in the corresponding week 
 \input{"time_plan.tex"}
+
 \section{Expected results for half time presentation}
 
 
