--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -2,7 +2,7 @@
 
 \begin{tabular}{|l|l|l|}
 	\hline
-	Week number & Description                & Comment                                              \\ \hline
+	Week (date) & Description                & Comment                                              \\ \hline
 	3           &                            &  \\ \hline
 	4           & First draft of thesis plan & Thesis plan approved by the mentor Lasse Alfredsson  \\ \hline
 	5           & Final draft of thesis plan & Thesis plan approved by Martin Danelljan             \\ \hline
