--- a/rapporter/Planering_rapport.tex
+++ b/rapporter/Planering_rapport.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
 
-
 \begin{document}
-	
+\setlength{\hoffset}{-40pt} % Flyttar vänstermarginalen -70
+\setlength{\textwidth}{430pt}
 
 \pagenumbering{<command>}
 \pagenumbering{Roman}
@@ -11,22 +11,68 @@
 \author{Armand Moulis}
 \date{\today}
 \maketitle
+\newpage
 
+\section*{Participants}
+\begin{center}
+	Master thesis worker 
+\end{center}
+\begin{center}
+	\begin{tabular}{|l|l|l|l|}
+		\hline
+		Name          & Role          & Email            & Abbreviation \\ \hline
+		Armand Moulis & Thesis worker & armand@moulis.se & AM           \\ \hline
+	\end{tabular}
+\end{center}
+
+\begin{center}
+	Experts and mentors
+\end{center}
+
+\begin{center}
+	\begin{tabular}{|l|l|l|l|}
+		\hline
+		Name             & Role          & Email                      & Abbreviation \\ \hline
+		Niclas Appleby   & Mentor at NFC & elisabet.leitet@polisen.se & NA           \\ \hline
+		Elisabet Leitet  & Mentor at NFC & niclas.appleby@polisen.se  & EL           \\ \hline
+		Lasse Alfredsson & Examiner      & lasse.alfredsson@liu.se    & LA           \\ \hline
+		Martin Danelljan & Expert at LIU & martin.danelljan@liu.se    & MD           \\ \hline
+	\end{tabular}
+\end{center}
+\newpage
+
+
+\newpage
 \setcounter{tocdepth}{3}
 \tableofcontents
 \newpage
+
+\section*{Document history}
+\begin{center}
+	\begin{tabular}{|l|l| p{5cm} |l|l| }
+		\hline
+		Version &  Date  & Changes     & Sign & Reviewed \\ \hline
+		  0.1   & \today & First Draft & AM   &  \\ \hline
+	\end{tabular}
+\end{center}
+\newpage
+
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
-
 %% Start of the document
+
+\section{Introduction}
 
 \section{Title suggestion}
 
-Automatic detection of RPPVSM 
+Automatic detection of relatively permanent pigmented or vascular skin marks (RPPVSM)
 \section{Problem specification}
 
 \section{Method}
+
+Work flow 
+
 
 \section{Reference base}
 
