--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -1,27 +1,29 @@
-
-
-\begin{tabular}{|l|l|l|}
+\begin{table}[hbtp]
+\caption{Time plan}
+\begin{tabular}{|l|p{0.3\textwidth}|p{6cm}|}
 	\hline
-	Week (date) & Description                & Comment                                              \\ \hline
-	3           &                            &  \\ \hline
-	4           & First draft of thesis plan & Thesis plan approved by the mentor Lasse Alfredsson  \\ \hline
-	5           & Final draft of thesis plan & Thesis plan approved by Martin Danelljan             \\ \hline
-	6           &                            &  \\ \hline
-	7           &                            &  \\ \hline
-	8           &                            &  \\ \hline
-	9           &                            &  \\ \hline
-	10          &                            &  \\ \hline
-	11          & Half time report           & Present the progress and preliminary results         \\ \hline
-	12          &                            &  \\ \hline
-	13          &                            &  \\ \hline
-	14          &                            &  \\ \hline
-	15          &                            &  \\ \hline
-	16          &                            &  \\ \hline
-	17          &                            &  \\ \hline
-	18          &                            &  \\ \hline
-	19          &                            &  \\ \hline
-	20          & First complete draft       & Thesis report has to be approved by Lasse Alfredsson \\ \hline
-	21          & Final draft                & Thesis report has to be approved by Martin Danelljan \\ \hline
-	22          &                            &  \\ \hline
-	23          & Thesis presentation 10/6   &  \\ \hline
+	\textbf{Week (date)} & \textbf{Description}       & \textbf{Comment}                             \\ \hline
+	3 (22/1)             &                            &  \\ \hline
+	4 (29/1)             & First draft of thesis plan & Thesis plan approved by the mentor LA        \\ \hline
+	5 (5/2)              & Final draft of thesis plan & Thesis plan approved by MD                   \\ \hline
+	6 (12/2)             &                            &  \\ \hline
+	7 (19/2)             &                            &  \\ \hline
+	8 (26/2)             &                            &  \\ \hline
+	9 (4/3)              &                            &  \\ \hline
+	10 (11/3)            &                            &  \\ \hline
+	11 (18/3)            & Half time report           & Present the progress and preliminary results \\ \hline
+	12 (25/3)            &                            &  \\ \hline
+	13 (1/4)             &                            &  \\ \hline
+	14 (8/4)             &                            &  \\ \hline
+	15 (15/4)            &                            &  \\ \hline
+	16 (22/4)            &                            &  \\ \hline
+	17 (29/4)            &                            &  \\ \hline
+	18 (6/5)             &                            &  \\ \hline
+	19 (13/5)            &                            &  \\ \hline
+	20 (20/5)            & First complete draft       & Thesis report has to be approved by LA       \\ \hline
+	21 (27/5)            & Final draft                & Thesis report has to be approved by the MD   \\ \hline
+	22 (3/6)             &                            &  \\ \hline
+	23 (10/6)            & Thesis presentation 10/6   &  \\ \hline
 \end{tabular}
+
+\end{table}
