Good progress on the planing-report, introduction done

--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -1,5 +1,10 @@
-\begin{table}[hbtp]
-\caption{Time plan}
+\newpage
+
+\section{Time plan}
+The time is divided into weeks and the date in brackets represents Friday in the corresponding week 
+
+\begin{table}[H]
+\caption{Milestones}
 \begin{tabular}{|l|p{0.3\textwidth}|p{6cm}|}
 	\hline
 	\textbf{Week (date)} & \textbf{Description}       & \textbf{Comment}                             \\ \hline
@@ -25,5 +30,4 @@
 	22 (3/6)             &                            &  \\ \hline
 	23 (10/6)            & Thesis presentation 10/6   &  \\ \hline
 \end{tabular}
-
 \end{table}
