--- a/rapporter/Planering_rapport.tex
+++ b/rapporter/Planering_rapport.tex
@@ -1,8 +1,18 @@
 \documentclass{article}
+\usepackage{graphicx}
+\usepackage{float}
+\usepackage[utf8]{inputenc}
+\usepackage{csquotes}
 
-\begin{document}
+
+\setlength{\parindent}{0cm} %Indenteringen för första raden på ett nytt stycke
+\setlength{\parskip}{3mm} %Avståndet för en ny rad inom samma section
 \setlength{\hoffset}{-40pt} % Flyttar vänstermarginalen -70
 \setlength{\textwidth}{430pt}
+
+\begin{document}
+	
+
 
 \pagenumbering{<command>}
 \pagenumbering{Roman}
@@ -14,9 +24,11 @@
 \newpage
 
 \section*{Participants}
+
 \begin{center}
-	Master thesis worker 
+	Master thesis worker
 \end{center}
+
 \begin{center}
 	\begin{tabular}{|l|l|l|l|}
 		\hline
@@ -64,26 +76,38 @@
 
 \section{Introduction}
 
+The amount of technical tools available for forensic analysis in law enforcement increases rapidly and today there exist millions of devises capable of taking relatively sharp images. Video surveillance cameras, security cameras and cellphone cameras can all be used to catch perpetrators in the act. The videos and still images can be used as evidence for identification during trails which means that forensic technicians need tools to evaluate if the suspect is the same person as the one caught on camera.
+
+Forensic technicians use still images to comparing visible features between suspect and perpetrator in order to determine whether it is the same person. This is done manually and is time consuming which is why there exist an interest in creating methods and standards which could do the comparison automatically. \cite{forensic_identification} To create automatic methods the facial features has to be detected, classified and located. The most common facial marks are moles, pockmarks, freckles, scars and acne. Some of these marks are not permanent, e.g. acne usually heals without leaving any marks, while scares and moles remains the whole life.    \cite{automatic_detector_2015}. Skin marks which can be used for identification are called "Relatively Permanent Pigmented or Vascular Skin Marks" (RPPVSM) and they have to be relatively permanent, common and can be observed without special equipment. \cite{statistic_RPPVSM}
+
+When the pattern of facial marks has been determined and compared with a suspect, the forensic technicians give a specialist report to he court. The report states how probable it is that the suspect is the perpetrator. In order to do give this statement they need to know the probability that two persons can have the same facial mark pattern. To know this there is a need of statical information about the occurrence and position of facial marks within the population. [Källa NFC????]
+
+This thesis work will focus on developing a automatic system which can automatically detect and position RPPVSM in human faces in order to get reliable statistics about facial marks in the population.   
+
 \section{Title suggestion}
 
-Automatic detection of relatively permanent pigmented or vascular skin marks (RPPVSM)
+This thesis will result in a thesis report which must have a appropriate title. The first suggestion is: 
+
+\begin{displayquote}
+"Automatic detection of relatively permanent pigmented or vascular skin marks (RPPVSM)"
+\end{displayquote}
+
 \section{Problem specification}
 
-\section{Method}
-
-Work flow 
+To generate statistical data of the presence of facial marks in specific regions in human faces it would be effective to do this automatically. Thus, is it possible to detect and locate facial marks and separate them into permanent respectively non-permanent marks automatically. Several different segmentation and digital image processing algorithms will be explored to detect facial marks and divide the face into regions. 
 
 
-\section{Reference base}
+\input{method}
 
-\section{Time plan}
-The time is divided into weeks and the date in brackets represents Friday in the corresponding week 
-\input{"time_plan.tex"}
+\input{reference_base}
 
-\section{Expected results for half time presentation}
+\input{time_plan}
 
+\input{expected_results}
 
-
+\newpage
+\bibliographystyle{unsrt} %Style which sort after referenced 
+\bibliography{references}
 
 %% End of the document
 
