--- a/rapporter/references.bib
+++ b/rapporter/references.bib
@@ -1,3 +1,5 @@
+
+
 @conference{forensic_identification,
     author    = "Spaun N.A., Bruegge R.W.V.",
     title     = "Forensic identification of people from images and video",
@@ -40,4 +42,94 @@
     month    = "October",
     %publisher= "",
     %note     = "",
+}
+
+@conference{face_segmentation_skin,
+	author    = "Partha Das, Anirban Sarkar, Soumyadeep Halder, Debasish Kundu, Sudipta Ghosh,
+	Sauvik Das Gupta",
+	title     = "A novel approach towards detecting faces and gender using skin segmentation and template matching",
+	booktitle   = "Signal Processing and Integrated Networks (SPIN)",
+	%editor   = "",
+	%volume   = "",
+	%number   = "",
+	%series   = "",
+	%pages    = "",
+	%address  = "",
+	year      = "2015",
+	%month    = "",
+	%publisher= "",
+	%note     = "",
+}
+
+@article{11_colours,
+	author    = "Joost van de Weijer, Cordelia Schmid, Jakob Verbeek, Diane Larlus",
+	title     = "Learning Color Names for Real-World Applications",
+	journal   = "IEEE Transactions on Image Processing",
+	volume   = "18",
+	number   = "7",
+	pages    = "1512-1523",
+	year      = "2009",
+	month    = "July",
+	%note     = "",
+}
+
+@InProceedings{landmarks_SVM,
+	author =      {U{\v{r}}i{\v{c}}{\'{a}}{\v{r}}, Michal and 
+	Franc, Vojt{\v{e}}ch and Hlav{\'{a}}{\v{c}}, V{\'{a}}clav },
+	title =       {Detector of Facial Landmarks Learned by the Structured Output {SVM}},
+	year =        {2012},
+	pages =       {547-556},
+	booktitle =   {VISAPP '12: Proceedings of the 7th International Conference on Computer Vision Theory and Applications},
+	editor =      {Csurka, Gabriela and Braz, Jos{\'{e}}},
+	publisher =   {SciTePress --- Science and Technology Publications},
+	address =     {Portugal},
+	volume =      {1},
+	isbn =        {978-989-8565-03-7},
+	book_pages =  {747},
+	month =       {February},
+	day =         {24-26},
+	venue =       {Rome, Italy},
+	annote =      {In this paper we describe a detector of facial
+	landmarks based on the Deformable Part Models. We treat the task
+	of landmark detection as an instance of the structured output
+	classification problem. We propose to learn the parameters of the
+	detector from data by the Structured Output Support Vector
+	Machines algorithm. In contrast to the previous works, the
+	objective function of the learning algorithm is directly related
+	to the performance of the resulting detector which is controlled
+	by a user-defined loss function. The resulting detector is
+	real-time on a standard PC, simple to implement and it can be
+	easily modified for detection of a different set of landmarks.  We
+	evaluate performance of the proposed landmark detector on a
+	challenging ''Labeled Faces in the Wild`` (LFW) database. The
+	empirical results demonstrate that the proposed detector is
+	consistently more accurate than two public domain implementations
+	based on the Active Appearance Models and the Deformable Part
+	Models. We provide an open-source implementation of the proposed
+	detector and the manual annotation of the facial landmarks for all
+	images in the LFW database.},
+	keywords =    {Facial Landmark Detection, Structured Output Classification, 
+	Support Vector Machines, Deformable Part Models},
+	prestige =    {important},
+	authorship =  {50-40-10},
+	status =      {published},
+	project =     {FP7-ICT-247525 HUMAVIPS, PERG04-GA-2008-239455 SEMISOL, 
+	Czech Ministry of Education project 1M0567},
+	www = {http://www.visapp.visigrapp.org},
+}
+
+@conference{landmarks_wild,
+	author    = "Xiangxin Zhu, Ramanan D.",
+	title     = "Face detection, pose estimation, and landmark localization in the wild",
+	booktitle   = "IEEE Computer Society Country of Publication:",
+	%editor   = "",
+	%volume   = "",
+	%number   = "",
+	%series   = "",
+	%pages    = "2879-2886",
+	%address  = "",
+	year      = "2012",
+	%month    = "",
+	%publisher= "",
+	%note     = "",
 }
