--- a/rapporter/expected_results.tex
+++ b/rapporter/expected_results.tex
@@ -1,1 +1,4 @@
 \section{Expected results for half time presentation}
+
+For the half time report, it should be possible to present a results from a functional face region generator. There should also exist a rough facial mark detector which finds all candidates of facial marks but can't separate RPPVSM, transient mark and false detection, e.g. facial hair. 
+    
