--- a/rapporter/references.bib
+++ b/rapporter/references.bib
@@ -1,6 +1,6 @@
 
 
-@conference{forensic_identification,
+@inproceedings{forensic_identification,
     author    = "Spaun N.A., Bruegge R.W.V.",
     title     = "Forensic identification of people from images and video",
     booktitle = "Biometrics: Theory, Applications and Systems",
@@ -16,7 +16,7 @@
     %note     = "",
 }
 
-@article{automatic_detector_2015,
+@inproceedings{automatic_detector_2015,
 	author    = "Nisha Srinivas M.Sc., Patrick J. Flynn Ph.D., Richard W. Vorder Bruegge Ph.D.",
 	title     = "Human Identification Using Automatic and Semi-Automatically Detected Facial Marks",
 	journal   = "Journal of Forensic Sciences",
@@ -28,7 +28,7 @@
 	%note     = "",
 }
 
-@conference{statistic_RPPVSM,
+@inproceedings{statistic_RPPVSM,
 	author    = "Nurhudatiana A., Matinpour K., Siu-Yeung Cho, Craft N.",
 	title     = "Fundamental statistics of relatively permanent pigmented or vascular skin marks for criminal and victim identification",
 	booktitle   = "Biometrics (IJCB)s",
@@ -44,7 +44,7 @@
     %note     = "",
 }
 
-@conference{face_segmentation_skin,
+@inproceedings{face_segmentation_skin,
 	author    = "Partha Das, Anirban Sarkar, Soumyadeep Halder, Debasish Kundu, Sudipta Ghosh,
 	Sauvik Das Gupta",
 	title     = "A novel approach towards detecting faces and gender using skin segmentation and template matching",
@@ -61,7 +61,7 @@
 	%note     = "",
 }
 
-@article{11_colours,
+@inproceedings{11_colours,
 	author    = "Joost van de Weijer, Cordelia Schmid, Jakob Verbeek, Diane Larlus",
 	title     = "Learning Color Names for Real-World Applications",
 	journal   = "IEEE Transactions on Image Processing",
@@ -73,7 +73,7 @@
 	%note     = "",
 }
 
-@InProceedings{landmarks_SVM,
+@inproceedings{landmarks_SVM,
 	author =      {U{\v{r}}i{\v{c}}{\'{a}}{\v{r}}, Michal and 
 	Franc, Vojt{\v{e}}ch and Hlav{\'{a}}{\v{c}}, V{\'{a}}clav },
 	title =       {Detector of Facial Landmarks Learned by the Structured Output {SVM}},
@@ -118,18 +118,20 @@
 	www = {http://www.visapp.visigrapp.org},
 }
 
-@conference{landmarks_wild,
-	author    = "Xiangxin Zhu, Ramanan D.",
-	title     = "Face detection, pose estimation, and landmark localization in the wild",
-	booktitle   = "IEEE Computer Society Country of Publication:",
-	%editor   = "",
-	%volume   = "",
-	%number   = "",
-	%series   = "",
-	%pages    = "2879-2886",
-	%address  = "",
-	year      = "2012",
-	%month    = "",
-	%publisher= "",
-	%note     = "",
+@inproceedings{landmarks_wild,
+	title={Face detection, pose estimation, and landmark localization in the wild},
+	author={Zhu, Xiangxin and Ramanan, Deva},
+	booktitle={Computer Vision and Pattern Recognition (CVPR), 2012 IEEE Conference on},
+	pages={2879--2886},
+	year={2012},
+	organization={IEEE}
+}
+
+@article{NFC_stat,
+	title={Scale of conclusions for the value of evidence},
+	author={Nordgaard, Anders and Ansell, Ricky and Drotz, Weine and Jaeger, Lars},
+	journal={Law, probability and risk},
+	pages={1-24},
+	year={2011},
+	publisher={Oxford Univ Press}
 }
