--- a/rapporter/reference_base.tex
+++ b/rapporter/reference_base.tex
@@ -1,4 +1,4 @@
-\section{Reference base}
+\section{Literature base}
 
 Several references has been mentioned in \cref{method} and most of them are of real interest. The main article which is covering the problem formulation well is "Human Identification Using Automatic and Semi-Automatically Detected Facial Marks" \cite{automatic_detector_2015}. It covers some pre-processing and post-processing methods and also the facial mark detection which makes it a good reference. It is a new and reliable source since Richard W. Vorder Bruegge is known by the costumers. 
 
