--- a/rapporter/references.bib
+++ b/rapporter/references.bib
@@ -16,7 +16,7 @@
     %note     = "",
 }
 
-@inproceedings{automatic_detector_2015,
+@article{automatic_detector_2015,
 	author    = "Nisha Srinivas M.Sc., Patrick J. Flynn Ph.D., Richard W. Vorder Bruegge Ph.D.",
 	title     = "Human Identification Using Automatic and Semi-Automatically Detected Facial Marks",
 	journal   = "Journal of Forensic Sciences",
@@ -61,7 +61,7 @@
 	%note     = "",
 }
 
-@inproceedings{11_colours,
+@article{11_colours,
 	author    = "Joost van de Weijer, Cordelia Schmid, Jakob Verbeek, Diane Larlus",
 	title     = "Learning Color Names for Real-World Applications",
 	journal   = "IEEE Transactions on Image Processing",
@@ -134,4 +134,24 @@
 	pages={1-24},
 	year={2011},
 	publisher={Oxford Univ Press}
+}
+
+@article{segmentation_method,
+	title={Survey on Image Segmentation Techniques},
+	author={Zaitoun, Nida M and Aqel, Musbah J},
+	journal={Procedia Computer Science},
+	volume={65},
+	pages={797--806},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{edge_method,
+	title={Comparison of Edge Detection Algorithms for Texture Analysis on Glass Production},
+	author={{\"O}zt{\"u}rk, {\c{S}}aban and Akdemir, Bayram},
+	journal={Procedia-Social and Behavioral Sciences},
+	volume={195},
+	pages={2675--2682},
+	year={2015},
+	publisher={Elsevier}
 }
