--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -54,12 +54,12 @@ Some relevant milestones are listed in \cref{table:milestones}. These are just g
 	12 (25/3)            &                                       &  \\ \hline
 	13 (1/4)             &                                       &  \\ \hline
 	14 (8/4)             &                                       &  \\ \hline
-	15 (15/4)            &                                       &  \\ \hline
-	16 (22/4)            & Algorithm functional                  & The algorithm function and may need fine tuning                                                                                       \\ \hline
-	17 (29/4)            &                                       &  \\ \hline
-	18 (6/5)             &                                       &  \\ \hline
-	19 (13/5)            & Results and validation                &  \\ \hline
-	20 (20/5)            & First complete draft of thesis report & Thesis report has been sent to MD                                                                                                     \\ \hline
+	15 (15/4)            & Algorithm functional                  & The algorithm function and may need fine                                                                                              \\ \hline
+	16 (22/4)            &                                       & tuning                                                                                                                                \\ \hline
+	17 (29/4)            & Results and validation                &  \\ \hline
+	18 (6/5)             & First complete draft of thesis report & Thesis report has been sent to MD                                                                                                     \\ \hline
+	19 (13/5)            &                                       &  \\ \hline
+	20 (20/5)            &                                       &  \\ \hline
 	21 (27/5)            & Final version of thesis report        & Thesis report has been approved by LA                                                                                                 \\ \hline
 	22 (3/6)             &                                       &  \\ \hline
 	23 (10/6)            & Thesis presentation                   &  \\ \hline
@@ -77,7 +77,7 @@ The most important date which are regarded as deadlines are listed in \cref{tabl
 		\hline
 		\textbf{Date} & \textbf{Description}                  \\ \hline
 		18/3          & Half time report                      \\ \hline
-		20/5          & Thesis report has been sent to MD     \\ \hline
+		6/5          & Thesis report has been sent to MD     \\ \hline
 		27/5          & Thesis report has been approved by LA \\ \hline
 		10/6          & Thesis presentation                   \\ \hline
 	\end{tabular}
