--- a/rapporter/Main.tex
+++ b/rapporter/Main.tex
@@ -53,7 +53,8 @@
 		\hline
 		Version &  Date  & Changes     & Sign & Reviewed \\ \hline
 		  0.1   & January 29, 2016 & First Draft & AM  & MD, EL \\ \hline
-		  0.2   & \today & Minor changes after comments from MD and EL, added section data generation & AM  &  \\ \hline
+		  0.2   & February 5, 2016 & Minor changes after comments from MD and EL, added section data generation & AM  & MD  \\ \hline
+		  0.3   & \today & Changes to the problem specification  & AM  &  \\ \hline
 	\end{tabular}
 \end{center}
 \newpage
@@ -83,7 +84,7 @@ This thesis will result in a thesis report which must have a appropriate title. 
 
 \section{Problem specification}
 
-The aim of this thesis is to examine the possibilities to automatically detect and locate facial marks and separate them into permanent respectively non-permanent marks. Several different segmentation and digital image processing algorithms will be explored to detect facial marks and divide the face into regions. 
+The aim of this thesis is to examine the possibilities to automatically detect and locate facial marks and classify them as permanent or non-permanent marks. Several different segmentation and digital image processing algorithms will be explored to detect facial marks. The thesis will also explore how to create a facial grid from facial landmarks, to give the facial marks a position.
 
 \section{Boundary}
 
